tests/NormalTests/paczka1/fuzzy1/33336756.err
Error in line 5: owrJQ0 A56 39,79
Error in line 6: owrJQ0 A56 1,4
Error in line 7: owrJQ0 A858 14,5
Error in line 22: 4LO37 A144 62,4
Error in line 30: sOREB A144 1M,6
Error in line 24: 4LO37 S651 71,9
Error in line 33: sOREB A144 22,2
